syntax = "proto3";

import "google/protobuf/timestamp.proto";
package api;
option go_package="./api";

// L2OrderBookRequest - запрос клиента, что он хочет
message L2OrderBookRequest {
  string symbol = 1;    // ask/bid
  uint32 size = 2;      // размер среза
  uint32 interval = 3;  // интервал в мсек
}

// L2OrderBookItem - значение элемента среза
message L2OrderBookItem {
  string price = 1;     // цена
  uint64 volume = 2;    // объем
}

// L2OrderBook - ответ клиенту
message L2OrderBook {
  string symbol = 1;    // ask/bid
  repeated L2OrderBookItem ask = 3;   // покупка (верх)
  repeated L2OrderBookItem bid = 2;   // продажа (низ)
  google.protobuf.Timestamp time = 4; // время
}

service Quotes {
  // GetL2OrderBook получаем запрос клиента и отправляем ответ в стриме
  // Server stream
  rpc GetL2OrderBook(L2OrderBookRequest) returns (stream L2OrderBook) {}
}